[package]
name = "advent_of_code"
version = "0.0.1"
authors = ["Andrew Sardone <andrew@andrewsardone.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
